--- a/css/style.css
+++ b/css/style.css
@@ -1183,13 +1183,13 @@ ol {
 }
 
 .product-item .pi-text .product-price {
-	color: #cc792d;
-	font-size: 20px;
+	color: #3a3a3a;
+	font-size: 14px;
 	font-weight: 700;
 }
 
 .product-item .pi-text .product-price span {
-	font-size: 14px;
+	font-size: 12px;
 	font-weight: 400;
 	color: #b2b2b2;
 	text-decoration: line-through;
