--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ ol {
 .section-title .product-price {
 	font-size: 24px;
 	font-weight: 700;
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .section-title .product-price span {
@@ -135,7 +135,7 @@ ol {
 	bottom: -14px;
 	width: 80px;
 	height: 3px;
-	background: #cc792d;
+	background: #3b3b3b;
 	content: "";
 	margin: 0 auto;
 }
@@ -171,21 +171,21 @@ ol {
 
 
 /* buttons */
-
+	/* SHOP NOW button */
 .primary-btn {
 	display: inline-block;
 	font-size: 14px;
 	font-weight: 700;
 	padding: 12px 30px;
 	color: #ffffff;
-	background: #cc792d;
+	background: #3b3b3b;
 	text-transform: uppercase;
 }
 
 .site-btn {
 	color: #ffffff;
-	background: #cc792d;
-	border: 1px solid #cc792d;
+	background: #3b3b3b;
+	border: 1px solid #3b3b3b;
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -412,8 +412,8 @@ ol {
 	position: absolute;
 	right: -3px;
 	top: -1px;
-	border: 1px solid #cc792d;
-	background: #cc792d;
+	border: 1px solid #3b3b3b;
+	background: #3b3b3b;
 	padding: 12px 16px 12px;
 	cursor: pointer;
 }
@@ -441,7 +441,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #cc792d;
+	background: #3b3b3b;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -472,7 +472,7 @@ ol {
 	top: -1px;
 	height: 15px;
 	width: 15px;
-	background: #cc792d;
+	background: #3b3b3b;
 	color: #ffffff;
 	border-radius: 50%;
 	font-size: 11px;
@@ -516,7 +516,7 @@ ol {
 }
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-items table tr td.si-text .product-selected p {
-	color: #cc792d;
+	color: #3b3b3b;
 	line-height: 30px;
 	margin-bottom: 7px;
 }
@@ -540,14 +540,14 @@ ol {
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-total span {
 	font-size: 14px;
-	color: #cc792d;
+	color: #3b3b3b;
 	text-transform: uppercase;
 	letter-spacing: 0.5px;
 	float: left;
 }
 
 .inner-header .nav-right li.cart-icon .cart-hover .select-total h5 {
-	color: #cc792d;
+	color: #3b3b3b;
 	float: right;
 }
 
@@ -646,7 +646,7 @@ ol {
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li.active a {
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li a {
@@ -662,7 +662,7 @@ ol {
 }
 
 .nav-item .nav-depart .depart-btn .depart-hover li a:hover {
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .nav-item .nav-menu {
@@ -680,7 +680,7 @@ ol {
 }
 
 .nav-item .nav-menu li.active a {
-	background: #cc792d;
+	background: #3b3b3b;
 }
 
 .nav-item .nav-menu li a {
@@ -697,7 +697,7 @@ ol {
 }
 
 .nav-item .nav-menu li:hover>a {
-	background: #cc792d;
+	background: #3b3b3b;
 }
 
 .nav-item .nav-menu li:hover .dropdown {
@@ -727,7 +727,7 @@ ol {
 
 .nav-item .nav-menu li .dropdown li:hover>a {
 	background: transparent;
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .nav-item .nav-menu li .dropdown li a {
@@ -750,7 +750,7 @@ ol {
 }
 
 .hero-items .single-hero-items span {
-	color: #cc792d;
+	color: #3b3b3b;
 	font-size: 12px;
 	font-weight: 700;
 	letter-spacing: 2px;
@@ -784,7 +784,7 @@ ol {
 	top: 100px;
 	opacity: 0;
 }
-
+	/* NEW NEW & SALE button */
 .hero-items .off-card {
 	height: 154px;
 	width: 154px;
@@ -795,7 +795,7 @@ ol {
 	position: absolute;
 	left: 47%;
 	top: 160px;
-	background: #cc792d;
+	background: #ffcb9a;
 	z-index: 1;
 	-webkit-transform: rotate(45deg);
 	-ms-transform: rotate(45deg);
@@ -1114,7 +1114,7 @@ ol {
 }
 
 .product-item .pi-pic .sale.pp-sale {
-	background: #cc792d;
+	background: #3b3b3b;
 }
 
 .product-item .pi-pic .icon {
@@ -1148,7 +1148,7 @@ ol {
 }
 
 .product-item .pi-pic ul li.w-icon.active a {
-	background: #cc792d;
+	background: #3b3b3b;
 	color: #ffffff;
 }
 
@@ -1224,7 +1224,7 @@ ol {
 }
 
 .countdown-timer .cd-item span {
-	color: #cc792d;
+	color: #3b3b3b;
 	font-weight: 700;
 	line-height: 40px;
 	font-size: 36px;
@@ -1351,7 +1351,7 @@ ol {
 }
 
 .single-latest-blog .latest-text .tag-list .tag-item i {
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .single-latest-blog .latest-text a {
@@ -1480,7 +1480,7 @@ ol {
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background: #cc792d;
+	background: #3b3b3b;
 	content: "";
 	border-radius: 50%;
 	opacity: 0;
@@ -1555,15 +1555,15 @@ ol {
 .newslatter-item .subscribe-form input::placeholder {
 	color: #b2b2b2;
 }
-
+	/* NEWSLETTER button */
 .newslatter-item .subscribe-form button {
 	display: inline-block;
 	color: #ffffff;
-	background: #cc792d;
+	background: #ffcb9a;
 	font-size: 13px;
 	font-weight: 700;
 	text-transform: uppercase;
-	border: 1px solid #cc792d;
+	border: 1px solid #ffcb9a;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -1592,7 +1592,7 @@ ol {
 }
 
 .copyright-reserved .copyright-text a:hover {
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .copyright-reserved .payment-pic {
@@ -1684,8 +1684,8 @@ ol {
 }
 
 .filter-widget .fw-brand-check .bc-item label input:checked~span {
-	background: #cc792d;
-	border-color: #cc792d;
+	background: #3b3b3b;
+	border-color: #3b3b3b;
 }
 
 .filter-widget .fw-brand-check .bc-item label .checkmark {
@@ -1772,14 +1772,14 @@ ol {
 }
 
 .filter-widget .filter-range-wrap .price-range .ui-slider-range.ui-corner-all.ui-widget-header:last-child {
-	background: #cc792d;
+	background: #3b3b3b;
 }
 
 .filter-widget .filter-btn {
 	font-size: 14px;
 	color: #ffffff;
 	font-weight: 700;
-	background: #cc792d;
+	background: #3b3b3b;
 	padding: 7px 20px 5px;
 	border-radius: 2px;
 	display: inline-block;
@@ -1980,7 +1980,7 @@ ol {
 	bottom: -4px;
 	width: 100%;
 	height: 2px;
-	background: #cc792d;
+	background: #3b3b3b;
 	content: "";
 }
 
@@ -2022,7 +2022,7 @@ ol {
 	height: 100%;
 	left: 0;
 	top: 0;
-	border: 1px solid #cc792d;
+	border: 1px solid #3b3b3b;
 	z-index: 1;
 }
 
@@ -2103,7 +2103,7 @@ ol {
 }
 
 .product-details .pd-desc h4 {
-	color: #cc792d;
+	color: #3b3b3b;
 	font-weight: 700;
 }
 
@@ -2319,7 +2319,7 @@ ol {
 	top: -1px;
 	width: 100%;
 	height: 5px;
-	background: #cc792d;
+	background: #3b3b3b;
 	content: "";
 	opacity: 0;
 }
@@ -2380,7 +2380,7 @@ ol {
 }
 
 .specification-table table tr td .p-price {
-	color: #cc792d;
+	color: #3b3b3b;
 	font-size: 16px;
 	font-weight: 700;
 }
@@ -2612,7 +2612,7 @@ ol {
 
 .cart-table table tr td.p-price,
 .cart-table table tr td.total-price {
-	color: #cc792d;
+	color: #3b3b3b;
 	font-size: 16px;
 	font-weight: 700;
 }
@@ -2764,7 +2764,7 @@ ol {
 }
 
 .proceed-checkout ul li.cart-total span {
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .proceed-checkout ul li span {
@@ -2857,8 +2857,8 @@ ol {
 }
 
 .checkout-form .create-item label input:checked~span {
-	background: #cc792d;
-	border-color: #cc792d;
+	background: #3b3b3b;
+	border-color: #3b3b3b;
 }
 
 .checkout-form .create-item label .checkmark {
@@ -2922,7 +2922,7 @@ ol {
 }
 
 .checkout-form .place-order .order-total .order-table li.total-price span {
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .checkout-form .place-order .order-total .order-table li span {
@@ -2948,8 +2948,8 @@ ol {
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label input:checked~span {
-	background: #cc792d;
-	border-color: #cc792d;
+	background: #3b3b3b;
+	border-color: #3b3b3b;
 }
 
 .checkout-form .place-order .order-total .payment-check .pc-item label .checkmark {
@@ -3094,7 +3094,7 @@ ol {
 	font-size: 12px;
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #cc792d;
+	color: #3b3b3b;
 	letter-spacing: 2px;
 	line-height: 20px;
 }
@@ -3147,7 +3147,7 @@ ol {
 	font-size: 14px;
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #cc792d;
+	color: #3b3b3b;
 	letter-spacing: 2px;
 	line-height: 20px;
 }
@@ -3184,7 +3184,7 @@ ol {
 	font-size: 12px;
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #cc792d;
+	color: #3b3b3b;
 	letter-spacing: 2px;
 	line-height: 20px;
 	display: inline-block;
@@ -3268,7 +3268,7 @@ ol {
 	top: 0;
 	height: 88px;
 	width: 3px;
-	background: #cc792d;
+	background: #3b3b3b;
 	content: "";
 }
 
@@ -3308,7 +3308,7 @@ ol {
 
 .blog-details-inner .tag-share .details-tag ul li i {
 	font-size: 18px;
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 .blog-details-inner .tag-share .blog-share {
@@ -3513,7 +3513,7 @@ ol {
 
 .map-inner .icon i {
 	font-size: 48px;
-	color: #cc792d;
+	color: #3b3b3b;
 }
 
 /*---------------------
@@ -3670,7 +3670,7 @@ ol {
 	float: left;
 	font-size: 13px;
 	color: #ffffff;
-	background: #cc792d;
+	background: #3b3b3b;
 }
 
 /*---------------------
@@ -4058,7 +4058,7 @@ ol {
 	}
 	.slicknav_btn {
 		border-radius: 0;
-		background-color: #cc792d;
+		background-color: #3b3b3b;
 		display: inline-block;
 		right: -16px;
 	}
@@ -4068,12 +4068,12 @@ ol {
 	}
 	.slicknav_nav a:hover {
 		border-radius: 0;
-		background: #cc792d;
+		background: #3b3b3b;
 		color: #fff;
 	}
 	.slicknav_nav .slicknav_row:hover {
 		border-radius: 0;
-		background: #cc792d;
+		background: #3b3b3b;
 		color: #fff;
 	}
 	.inner-header .nav-right li.cart-icon .cart-hover {
